# pi-dash

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  COPYRIGHT_CHECK.md  Cargo.toml  README.es.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  RELEASING.md  SECURITY.md  dist-workspace.toml  docker-compose-local.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
.ai_design/create_review_state/: design.md  tasks.md
.ai_design/git_support_generalization/: design.md  tasks.md
.ai_design/github_deep_integration/: design.md
.ai_design/github_pr_issue_link/: design.md
.ai_design/github_sync/: design.md  tasks.md
.ai_design/implement_runner/: github-runner-architecture.md  implementation-tasks.md  observability.md  operator-guide.md  runner-design.md  tui-design.md  user-guide.md
.ai_design/integrate_ai_agent/: 01-overview.md  02-backend.md  03-frontend.md  04-cloud.md  05-rollout.md  06-chat-ui-refactor.md  README.md
.ai_design/issue_run_improve/: design.md
.ai_design/issue_runner/: design.md
.ai_design/issue_ticking_system/: design.md  tasks.md
.ai_design/loop_project_management/: design.md  tasks.md
.ai_design/make_chat_issue_parallel_working/: design.md  tasks.md
.ai_design/make_e2e_ready/: implementation-plan.md
.ai_design/move_to_https/: daemon_module.md  design.md  tasks.md
.ai_design/n_runners_in_same_machine/: decisions.md  design.md  implementation-plan.md  tasks.md
.ai_design/project_issue_git_fields/: design.md
.ai_design/project_scheduler/: design.md  tasks.md
.ai_design/project_scheduler_calendar/: decisions.md
.ai_design/prompt_section_system/: customization-ui.md  design.md  tasks.md
.ai_design/prompt_system/: prompt-system-design.md  tasks.md  workflow-handbook.md
.ai_design/runner_agent_bridge/: design.md  tasks.md
.ai_design/runner_direct_chat/: design.md  tasks.md
.ai_design/runner_install_ux/: cli-restructure-and-install-flow.md
.ai_design/ticking_optimization/: design.md
.ai_design/tui_refactor/: design.md  tasks.md
.ai_design/worktree_pooling/: design.md  implementation-plan.md
.github/: i18n-sync-pr-body.md
.github/ISSUE_TEMPLATE/: --bug-report.yaml  --feature-request.yaml  config.yaml
.github/instructions/: bash.instructions.md
.github/workflows/: build-branch.yml  feature-deployment.yml  i18n-sync.yml  pull-request-test-api.yml  pull-request-test-runner.yml  pull-request-test-web-apps.yml  release.yml
.test/: tick_test001.txt  tick_test002.txt
apps/admin/: Dockerfile.admin  package.json  postcss.config.js  react-router.config.ts  tsconfig.json  vite.config.ts
apps/api/: .coveragerc  .env.example  Dockerfile.api  Dockerfile.dev  manage.py  package.json  pyproject.toml  pytest.ini  run_tests.py
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/live/: package.json  tsconfig.json
apps/proxy/: Caddyfile.aio.ce  Caddyfile.ce
apps/space/: Dockerfile.space  README.md  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
apps/web/: Dockerfile.web  manifest.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: linting.md
runner/: Cargo.toml  README.md  dist-workspace.toml  install.ps1  install.sh
runner/src/: api_client.rs  lib.rs  main.rs
runner/src/agent/: mod.rs
runner/src/approval/: mod.rs  policy.rs  router.rs
runner/src/claude_code/: bridge.rs  mod.rs  process.rs  schema.rs
runner/src/cli/: ai.rs  comment.rs  config_cmd.rs  configure.rs  connect.rs  context.rs  doctor.rs  install.rs  issue.rs  mod.rs  project.rs  remove.rs  resolve.rs  restart.rs  rotate.rs  run.rs  runner.rs  runner_ops.rs  service.rs  start.rs  state.rs  status.rs  stop.rs  token.rs  tui.rs  uninstall.rs  update.rs  workdir.rs  workpad.rs  workspace.rs
runner/src/cli/auth/: login.rs  logout.rs  mod.rs  status.rs
runner/src/cloud/: enroll.rs  http.rs  mod.rs  projects.rs  protocol.rs  register.rs  runners.rs  ws.rs
runner/src/codex/: app_server.rs  bridge.rs  jsonrpc.rs  mod.rs  schema.rs
runner/src/config/: file.rs  schema.rs
runner/src/cursor_agent/: bridge.rs  mod.rs  process.rs  schema.rs
runner/src/daemon/: machine_control.rs  mod.rs  observability.rs  run_event_mirror.rs  runner_instance.rs  runner_out.rs  state.rs  supervisor.rs
runner/src/grok/: bridge.rs  mod.rs  process.rs  schema.rs
runner/src/history/: index.rs  jsonl.rs  mod.rs
runner/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
runner/src/openclaw/: bridge.rs  mod.rs  process.rs  schema.rs
runner/src/service/: launchd.rs  mod.rs  reload.rs  systemd.rs  windows.rs
runner/src/tui/: app.rs  event.rs  event_sender.rs  ipc_client.rs  mod.rs  onboarding.rs
runner/src/tui/input/: mod.rs  paste_burst.rs
runner/src/tui/input/keymap/: default_bindings.rs  mod.rs  resolver.rs
runner/src/tui/render/: mod.rs  renderable.rs
runner/src/tui/tui_runtime/: event_stream.rs  frame_rate_limiter.rs  frame_requester.rs  mod.rs  runtime.rs
runner/src/tui/view/: focus.rs  mod.rs  tab.rs
runner/src/tui/views/: approvals.rs  config.rs  general.rs  mod.rs  runner_status.rs  runs.rs  status.rs
runner/src/tui/views/modals/: add_runner.rs  confirm.rs  help.rs  mod.rs  remove_runner.rs
runner/src/tui/widgets/: mod.rs  picker.rs  scroll_state.rs  selectable_list.rs  textarea.rs
runner/src/util/: backoff.rs  browser.rs  confirm.rs  hostname.rs  logging.rs  mod.rs  paths.rs  pd_symlink.rs  runner_id.rs  runner_name.rs  shell.rs  signal.rs
runner/src/workspace/: chat_worktree.rs  context.rs  git.rs  mod.rs  pool.rs  pool_tests.rs  resolve.rs
runner/tests/: claude_bridge_fake.rs  cloud_http_run_events.rs  cloud_ws_fake.rs  codex_bridge_fake.rs  cursor_bridge_fake.rs  pidash_cli_contract.rs  pidash_cli_structure.rs  pidash_run_errors.rs  pidash_runner_add_auth.rs  protocol_roundtrip.rs
runner/wix/: main.wxs
(+3854 files in other folders)
